Cleanup LS Code

--- a/LocalSearchAgent/LocalSearch.ipynb
+++ b/LocalSearchAgent/LocalSearch.ipynb
@@ -8,7 +8,7 @@
    "outputs": [],
    "source": [
     "import lyra_graphtool_test as lgtool\n",
-    "from utils import ORIGN, BASIC_SITE, SITE1, SITE2,  SITE3, Node, Graph, Worker\n",
+    "from LS_utils import ORIGN, BASIC_SITE, SITE1, SITE2,  SITE3, Node, Graph, Worker\n",
     "import random\n",
     "from copy import deepcopy"
    ]
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 3,
    "id": "fc0564d3-8c16-41c8-9f13-c6eec331c0b1",
    "metadata": {},
    "outputs": [],
@@ -390,7 +390,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 4,
    "id": "49640432-10c9-4a41-a577-5822824b2251",
    "metadata": {},
    "outputs": [],
@@ -400,7 +400,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 5,
    "id": "8a55d12e-2b59-4c3d-aca6-488b678cc638",
    "metadata": {},
    "outputs": [
@@ -418,7 +418,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 6,
    "id": "6f791b47-956b-4fea-bd8f-58fc803c0c2f",
    "metadata": {},
    "outputs": [
@@ -428,7 +428,7 @@
        "14500.0"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -439,21 +439,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": null,
    "id": "4d9ef04d-1354-4b65-8497-2817664276ff",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[1, 2, 2, 2]"
-      ]
-     },
-     "execution_count": 48,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "lsa.get_worker_list()"
    ]
@@ -483,7 +472,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.8"
+   "version": "3.12.2"
   }
  },
  "nbformat": 4,
