fix file, dir namings

--- a/RandomWalkAgent/RandomAgent.ipynb
+++ b/RandomWalkAgent/RandomAgent.ipynb
@@ -14,7 +14,7 @@
    "outputs": [],
    "source": [
     "import lyra_graphtool_test as lgtool\n",
-    "from utils import ORIGN, BASIC_SITE, SITE1, SITE2,  SITE3, Node, Graph, Worker\n",
+    "from RW_utils import ORIGN, BASIC_SITE, SITE1, SITE2,  SITE3, Node, Graph, Worker\n",
     "import random\n",
     "from copy import deepcopy"
    ]
